unpackaged/main/default/objects/Support_Product__c/Support_Product__c.object-meta.xml
<CustomObject>
    <label>Support Product</label>
    <nameField>
        <displayFormat>MAJ-{0000}-{YY}</displayFormat>
        <label>Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>