unpackaged/main/default/objects/Support_Product__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>R00N20000001EeAEEA0</relationshipName>
    <type>Lookup</type>
</CustomField>