unpackaged/main/default/objects/Support_Product__c/fields/Contract_No_Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Contract_No_Site_ID__c</fullName>
    <label>Contract No/Site ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>