unpackaged/main/default/objects/Support_Product__c/fields/Contract_Owner__c.field-meta.xml
<CustomField>
    <fullName>Contract_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N20000001EeA9EAK</relationshipName>
    <type>Lookup</type>
</CustomField>