unpackaged/main/default/objects/Support_Product__c/fields/Credit_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Credit_Purchased__c</fullName>
    <label>Credit Purchased</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>