unpackaged/main/default/objects/Support_Product__c/fields/Credit_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Credit_Remaining__c</fullName>
    <formula>Credit_Purchased__c - Credit_Used_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>