unpackaged/main/default/objects/Support_Product__c/fields/Credit_Used_2__c.field-meta.xml
<CustomField>
    <fullName>Credit_Used_2__c</fullName>
    <label>Credit Used</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>