unpackaged/main/default/objects/Support_Product__c/fields/Days_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Days_Purchased__c</fullName>
    <label>Days Purchased</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>