unpackaged/main/default/objects/Support_Product__c/fields/Days_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Days_Remaining__c</fullName>
    <formula>IF( Days_Used_2__c &gt; 0 ,
  Days_Purchased__c - Days_Used_2__c,
  Days_Purchased__c - Days_Used__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>