unpackaged/main/default/objects/Support_Product__c/fields/Days_Used_2__c.field-meta.xml
<CustomField>
    <fullName>Days_Used_2__c</fullName>
    <inlineHelpText>Use this field to manually enter days used.</inlineHelpText>
    <label>Days Used (Override)</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>