unpackaged/main/default/objects/Support_Product__c/fields/Days_Used__c.field-meta.xml
<CustomField>
    <fullName>Days_Used__c</fullName>
    <label>Days Used</label>
    <summarizedField>Timecard__c.Days_Worked__c</summarizedField>
    <summaryFilterItems>
        <field>Timecard__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Timecard__c.Support_Product__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>