unpackaged/main/default/objects/Support_Product__c/fields/Downgraded_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Downgraded_Licenses__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Downgraded Licenses</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>