unpackaged/main/default/objects/Support_Product__c/fields/End_Month__c.field-meta.xml
<CustomField>
    <fullName>End_Month__c</fullName>
    <formula>CASE( 
MONTH(  Finish_Date__c  ) , 
1, "January", 
2, "February", 
3, "March", 
4, "April", 
5, "May", 
6, "June", 
7, "July", 
8, "August", 
9, "September", 
10, "October", 
11, "November", 
12, "December", 
"Invalid month")</formula>
    <label>End Month</label>
    <type>Text</type>
</CustomField>