unpackaged/main/default/objects/Support_Product__c/fields/Finish_Date__c.field-meta.xml
<CustomField>
    <fullName>Finish_Date__c</fullName>
    <label>Finish Date (Legacy)</label>
    <type>Date</type>
</CustomField>