unpackaged/main/default/objects/Support_Product__c/fields/Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Rate__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Hourly rate for the credit/day/hour based contracts.</description>
    <label>Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>