unpackaged/main/default/objects/Support_Product__c/fields/Hours_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Hours_Purchased__c</fullName>
    <label>Hours Purchased</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>