unpackaged/main/default/objects/Support_Product__c/fields/Hours_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Hours_Remaining__c</fullName>
    <formula>Hours_Purchased__c -  Hours_Used_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>