unpackaged/main/default/objects/Support_Product__c/fields/Hours_Used_2__c.field-meta.xml
<CustomField>
    <fullName>Hours_Used_2__c</fullName>
    <label>Hours Used</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>