unpackaged/main/default/objects/Support_Product__c/fields/LicenceExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>LicenceExpiryDate__c</fullName>
    <label>Licence Expiry Date</label>
    <type>Date</type>
</CustomField>