unpackaged/main/default/objects/Support_Product__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <label>License Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ALC</fullName>
            </value>
            <value>
                <fullName>YLC</fullName>
            </value>
            <value>
                <fullName>QLC</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>MX Pro</fullName>
            </value>
            <value>
                <fullName>MX Premium</fullName>
            </value>
            <value>
                <fullName>MX ASR</fullName>
            </value>
            <value>
                <fullName>MX Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>