unpackaged/main/default/objects/Support_Product__c/fields/Number_of_Users__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Users__c</fullName>
    <label>Number of Licences</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>