unpackaged/main/default/objects/Support_Product__c/fields/PickRenewalBusinessLostReason__c.field-meta.xml
<CustomField>
    <fullName>PickRenewalBusinessLostReason__c</fullName>
    <description>To report on business lost reason and potential on reinstating business</description>
    <label>Renewal Business Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STOPS – Stopping Licenses</fullName>
            </value>
            <value>
                <fullName>ToS – Termination of Support on a License</fullName>
            </value>
            <value>
                <fullName>SOS – Suspension of Support on a License</fullName>
            </value>
            <value>
                <fullName>Migrations – Migrating a product into another</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>