unpackaged/main/default/objects/Support_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Support Products</relationshipLabel>
    <relationshipName>Contract_Details</relationshipName>
    <type>Lookup</type>
</CustomField>