unpackaged/main/default/objects/Support_Product__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <label>Product Description (legacy)</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>