unpackaged/main/default/objects/Support_Product__c/fields/Product_Division__c.field-meta.xml
<CustomField>
    <fullName>Product_Division__c</fullName>
    <formula>TEXT(Product__r.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Division</label>
    <type>Text</type>
</CustomField>