unpackaged/main/default/objects/Support_Product__c/fields/Product_Name2__c.field-meta.xml
<CustomField>
    <fullName>Product_Name2__c</fullName>
    <formula>Product__r.Name</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>