unpackaged/main/default/objects/Support_Product__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name (Legacy)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>