unpackaged/main/default/objects/Support_Product__c/fields/Product_Subcategory_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Subcategory_Name__c</fullName>
    <formula>Product__r.Subcategory_Name__c</formula>
    <label>Product Subcategory Name</label>
    <type>Text</type>
</CustomField>