unpackaged/main/default/objects/Support_Product__c/fields/ProductDescriptionAuto__c.field-meta.xml
<CustomField>
    <fullName>ProductDescriptionAuto__c</fullName>
    <formula>Product__r.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Description</label>
    <type>Text</type>
</CustomField>