unpackaged/main/default/objects/Support_Product__c/fields/Profit__c.field-meta.xml
<CustomField>
    <fullName>Profit__c</fullName>
    <formula>( Total_Sale_Price__c -  Total_Buy__c )/ Total_Sale_Price__c</formula>
    <label>Profit (Legacy)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>