unpackaged/main/default/objects/Support_Product__c/fields/SC_Account__c.field-meta.xml
<CustomField>
    <fullName>SC_Account__c</fullName>
    <formula>Support_Contract__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC:Account</label>
    <type>Text</type>
</CustomField>