unpackaged/main/default/objects/Support_Product__c/fields/SC_Finish_Date__c.field-meta.xml
<CustomField>
    <fullName>SC_Finish_Date__c</fullName>
    <formula>Support_Contract__r.Finish_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finish Date</label>
    <type>Date</type>
</CustomField>