unpackaged/main/default/objects/Support_Product__c/fields/SC_ID__c.field-meta.xml
<CustomField>
    <fullName>SC_ID__c</fullName>
    <formula>Support_Contract__r.Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC:ID</label>
    <type>Text</type>
</CustomField>