unpackaged/main/default/objects/Support_Product__c/fields/SC_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>SC_Invoice_Number__c</fullName>
    <formula>Support_Contract__r.Majenta_Invoice_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Number</label>
    <type>Text</type>
</CustomField>