unpackaged/main/default/objects/Support_Product__c/fields/SC_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SC_Start_Date__c</fullName>
    <formula>Support_Contract__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>