unpackaged/main/default/objects/Support_Product__c/fields/SC_Supported_By__c.field-meta.xml
<CustomField>
    <fullName>SC_Supported_By__c</fullName>
    <formula>TEXT(Support_Contract__r.Supported_By__c)</formula>
    <label>Supported By</label>
    <type>Text</type>
</CustomField>