unpackaged/main/default/objects/Support_Product__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date (Legacy)</label>
    <type>Date</type>
</CustomField>