unpackaged/main/default/objects/Support_Product__c/fields/Support_Contract__c.field-meta.xml
<CustomField>
    <fullName>Support_Contract__c</fullName>
    <label>Support Contract</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Support_Contracts__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Support_Contracts__c</referenceTo>
    <relationshipLabel>Support Products</relationshipLabel>
    <relationshipName>Support_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>