unpackaged/main/default/objects/Support_Product__c/fields/Supported_By__c.field-meta.xml
<CustomField>
    <fullName>Supported_By__c</fullName>
    <label>Supported By (Legacy)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Autodesk</fullName>
            </value>
            <value>
                <fullName>Bell Micro</fullName>
            </value>
            <value>
                <fullName>CANNON</fullName>
            </value>
            <value>
                <fullName>Cisco</fullName>
            </value>
            <value>
                <fullName>Clarity</fullName>
            </value>
            <value>
                <fullName>CMS</fullName>
            </value>
            <value>
                <fullName>CMS/BakBone</fullName>
            </value>
            <value>
                <fullName>Computer 2000</fullName>
            </value>
            <value>
                <fullName>Data Services</fullName>
            </value>
            <value>
                <fullName>Datech</fullName>
            </value>
            <value>
                <fullName>DNS</fullName>
            </value>
            <value>
                <fullName>DNS/NetApp</fullName>
            </value>
            <value>
                <fullName>Elysium</fullName>
            </value>
            <value>
                <fullName>ETC</fullName>
            </value>
            <value>
                <fullName>Future CAD</fullName>
            </value>
            <value>
                <fullName>Hammer</fullName>
            </value>
            <value>
                <fullName>Hammer/Overland</fullName>
            </value>
            <value>
                <fullName>INSIGHT</fullName>
            </value>
            <value>
                <fullName>Majenta</fullName>
            </value>
            <value>
                <fullName>Man &amp; Machine</fullName>
            </value>
            <value>
                <fullName>NetApp</fullName>
            </value>
            <value>
                <fullName>Olympic Support</fullName>
            </value>
            <value>
                <fullName>Open PSL</fullName>
            </value>
            <value>
                <fullName>SensAble</fullName>
            </value>
            <value>
                <fullName>Siemens</fullName>
            </value>
            <value>
                <fullName>TecDem</fullName>
            </value>
            <value>
                <fullName>Theoram</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>