unpackaged/main/default/objects/Support_Product__c/fields/Total_Buy__c.field-meta.xml
<CustomField>
    <fullName>Total_Buy__c</fullName>
    <label>Total Buy</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>