unpackaged/main/default/objects/Support_Product__c/fields/Total_Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Sale_Price__c</fullName>
    <label>Total Sale Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>