unpackaged/main/default/objects/Support_Product__c/fields/Type_of_License__c.field-meta.xml
<CustomField>
    <fullName>Type_of_License__c</fullName>
    <label>Type of License</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LUM</fullName>
            </value>
            <value>
                <fullName>DSLS</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Multiple User</fullName>
                <isActive>false</isActive>
                <label>Multiple User</label>
            </value>
            <value>
                <fullName>Single User</fullName>
                <isActive>false</isActive>
                <label>Single User</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>