unpackaged/main/default/objects/Support_Product__c/recordTypes/CreditSupport.recordType-meta.xml
<RecordType>
    <fullName>CreditSupport</fullName>
    <active>true</active>
    <description>Used for credit based support contracts.</description>
    <label>Credit Based Support</label>
</RecordType>