unpackaged/main/default/objects/Support_Product__c/recordTypes/DaysSupport.recordType-meta.xml
<RecordType>
    <fullName>DaysSupport</fullName>
    <active>true</active>
    <description>Used for days based support contracts.</description>
    <label>Days Based Support</label>
</RecordType>