unpackaged/main/default/objects/Support_Product__c/recordTypes/HoursSupport.recordType-meta.xml
<RecordType>
    <fullName>HoursSupport</fullName>
    <active>true</active>
    <description>Used for hours based support contracts.</description>
    <label>Hours Based Support</label>
</RecordType>