unpackaged/main/default/objects/Support_Product__c/recordTypes/StandardSupport.recordType-meta.xml
<RecordType>
    <fullName>StandardSupport</fullName>
    <active>true</active>
    <description>Used for "flat fee" rolling support contracts.</description>
    <label>Standard Support</label>
</RecordType>