unpackaged/main/default/objects/Support_Product__c/recordTypes/SwedenSupport.recordType-meta.xml
<RecordType>
    <fullName>SwedenSupport</fullName>
    <active>true</active>
    <description>***SWEDEN ONLY*** Used for "flat fee" rolling support contracts.</description>
    <label>Sweden Support</label>
</RecordType>