unpackaged/main/default/objects/Support_Product__c/validationRules/Product_Not_Maintenance_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Not_Maintenance_Type</fullName>
    <active>false</active>
    <errorConditionFormula>TEXT(Product__r.Type__c) = "Maintenance"</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>You can not use a maintenance product on a support contract. You must select a valid product.</errorMessage>
</ValidationRule>