unpackaged/main/default/objects/Support_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Name2__c</field>
        <operation>equals</operation>
        <value>Dassault Training</value>
    </filters>
    <label>All</label>
</ListView>